k8s/vault-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
      - name: vault
        image: trial4w4crx.jfrog.io/vault-repo/vault-server:image-1.0.1
        ports:
        - containerPort: 8200
        volumeMounts:
        - name: vault-config
          mountPath: /etc/vault.d
      volumes:
      - name: vault-config
        configMap:
          name: vault-config
      imagePullSecrets:
      - name: jfrog-registry-secret
