k8s/vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-service
spec:
  type: LoadBalancer
  ports:
  - port: 8200
    targetPort: 8200
  selector:
    app: vault
